[gd_scene load_steps=23 format=3 uid="uid://di01bxnwvvn8m"]

[ext_resource type="Script" path="res://scenes/fight/fight.gd" id="1_fxtqe"]
[ext_resource type="Texture2D" uid="uid://b8rfd4mowdobl" path="res://assets/fight_scene/background_animation_darker.png" id="2_peegu"]
[ext_resource type="Texture2D" uid="uid://dur2745c4yptt" path="res://assets/fight_scene/input_ext.png" id="3_hthwu"]
[ext_resource type="PackedScene" uid="uid://dmm2kvxyuadk4" path="res://scenes/fight/health_bar.tscn" id="4_dqjig"]
[ext_resource type="Texture2D" uid="uid://cp1aayx8j0p21" path="res://assets/fight_scene/attack_btn.png" id="5_qfwxr"]
[ext_resource type="Texture2D" uid="uid://tgeuq7w7qpwd" path="res://assets/fight_scene/attack_btn_inverted.png" id="6_dx4cd"]
[ext_resource type="Texture2D" uid="uid://eeec4ttvqsvn" path="res://assets/fight_scene/froschfigur.png" id="6_hen0n"]
[ext_resource type="Texture2D" uid="uid://dldclsrocvme8" path="res://assets/fight_scene/help_btn.png" id="7_vh5qi"]
[ext_resource type="Texture2D" uid="uid://b13a3tb4nxwkm" path="res://assets/fight_scene/help_btn_inverted.png" id="8_624dc"]
[ext_resource type="Texture2D" uid="uid://0chub6m0k7fj" path="res://assets/fight_scene/enemy_sheet_1.png" id="8_bdslq"]
[ext_resource type="FontFile" uid="uid://ciewkl3qhx6t3" path="res://assets/fight_scene/PERMANENTDAYLIGHT.TTF" id="11_x7a0i"]
[ext_resource type="Texture2D" uid="uid://pmi71v612gdp" path="res://assets/fight_scene/health_bar_frog.png" id="12_13gfv"]

[sub_resource type="Animation" id="Animation_ik2so"]
resource_name = "new_animation"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r031u"]
_data = {
"idle": SubResource("Animation_ik2so")
}

[sub_resource type="Animation" id="Animation_b6umv"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_54lx1"]
_data = {
"idle": SubResource("Animation_b6umv")
}

[sub_resource type="Animation" id="Animation_hxc4k"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iybaq"]
_data = {
"idle": SubResource("Animation_hxc4k")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxw6u"]
content_margin_left = 7.0
bg_color = Color(0.141176, 0.223529, 0.247059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a1kkv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s456w"]
content_margin_left = 7.0
bg_color = Color(0.141176, 0.223529, 0.247059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_npgfe"]

[node name="Fight" type="Node2D"]
script = ExtResource("1_fxtqe")
metadata/_edit_vertical_guides_ = [576.0]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 323)
zoom = Vector2(1.675, 1.675)

[node name="Background" type="Sprite2D" parent="."]
light_mask = 0
z_index = -10
position = Vector2(576, 221.5)
scale = Vector2(7.2, 4.92222)
texture = ExtResource("2_peegu")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
libraries = {
"": SubResource("AnimationLibrary_r031u")
}

[node name="BackgroundInput" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(7.2, 7.2)
texture = ExtResource("3_hthwu")

[node name="AttackButton" type="TextureButton" parent="."]
offset_left = 30.0
offset_top = 567.0
offset_right = 551.0
offset_bottom = 617.0
texture_normal = ExtResource("5_qfwxr")
texture_hover = ExtResource("6_dx4cd")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="HelpButton" type="TextureButton" parent="."]
offset_left = 599.0
offset_top = 567.0
offset_right = 1128.0
offset_bottom = 617.0
texture_normal = ExtResource("7_vh5qi")
texture_hover = ExtResource("8_624dc")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Enemy" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(929.033, 163.95)
scale = Vector2(0.285933, 0.285933)
texture = ExtResource("8_bdslq")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy"]
libraries = {
"": SubResource("AnimationLibrary_54lx1")
}

[node name="Frog" type="Sprite2D" parent="."]
position = Vector2(192, 425)
scale = Vector2(4.80833, 4.80833)
texture = ExtResource("6_hen0n")
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Frog"]
libraries = {
"": SubResource("AnimationLibrary_iybaq")
}

[node name="HealthBarEnemy" parent="." instance=ExtResource("4_dqjig")]
z_index = -2
offset_left = 894.187
offset_top = 31.875
offset_right = 1189.19
offset_bottom = 88.875
scale = Vector2(0.705, 0.705)
metadata/_edit_use_anchors_ = true

[node name="HealthBarFrog" parent="." instance=ExtResource("4_dqjig")]
offset_left = 28.7231
offset_top = 29.375
offset_right = 323.723
offset_bottom = 86.375
metadata/_edit_use_anchors_ = true

[node name="Question" type="Label" parent="."]
offset_left = 40.0
offset_top = 465.0
offset_right = 210.0
offset_bottom = 488.0
text = "Wo schneidet sich f(x) mit der g(x) ="
metadata/_edit_use_anchors_ = true

[node name="Question2" type="Label" parent="."]
offset_left = 414.0
offset_top = 465.0
offset_right = 584.0
offset_bottom = 488.0
metadata/_edit_use_anchors_ = true

[node name="Question3" type="Label" parent="."]
offset_left = 796.0
offset_top = 465.0
offset_right = 966.0
offset_bottom = 488.0
metadata/_edit_use_anchors_ = true

[node name="Answer" type="LineEdit" parent="."]
offset_left = 40.0
offset_top = 507.0
offset_right = 356.0
offset_bottom = 538.0
theme_override_colors/font_color = Color(0.764706, 0.803922, 0.756863, 1)
theme_override_colors/font_placeholder_color = Color(0.764706, 0.803922, 0.756863, 0.698039)
theme_override_styles/normal = SubResource("StyleBoxFlat_wxw6u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1kkv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_s456w")
placeholder_text = "Solution"
metadata/_edit_use_anchors_ = true

[node name="Answer2" type="LineEdit" parent="."]
offset_left = 414.0
offset_top = 507.0
offset_right = 730.0
offset_bottom = 538.0
theme_override_colors/font_color = Color(0.764706, 0.803922, 0.756863, 1)
theme_override_colors/font_placeholder_color = Color(0.764706, 0.803922, 0.756863, 0.698039)
theme_override_styles/normal = SubResource("StyleBoxFlat_wxw6u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1kkv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_s456w")
placeholder_text = "Solution"
metadata/_edit_use_anchors_ = true

[node name="Answer3" type="LineEdit" parent="."]
offset_left = 795.0
offset_top = 507.0
offset_right = 1111.0
offset_bottom = 538.0
theme_override_colors/font_color = Color(0.764706, 0.803922, 0.756863, 1)
theme_override_colors/font_placeholder_color = Color(0.764706, 0.803922, 0.756863, 0.698039)
theme_override_styles/normal = SubResource("StyleBoxFlat_wxw6u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1kkv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_s456w")
placeholder_text = "Solution"
metadata/_edit_use_anchors_ = true

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 40.0
offset_top = 507.0
offset_right = 356.0
offset_bottom = 538.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_npgfe")
metadata/_edit_use_anchors_ = true

[node name="OptionButton2" type="OptionButton" parent="."]
offset_left = 414.0
offset_top = 507.0
offset_right = 730.0
offset_bottom = 538.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_npgfe")
metadata/_edit_use_anchors_ = true

[node name="OptionButton3" type="OptionButton" parent="."]
offset_left = 796.0
offset_top = 507.0
offset_right = 1112.0
offset_bottom = 538.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_npgfe")
metadata/_edit_use_anchors_ = true

[node name="Function" type="Label" parent="."]
offset_left = 723.0
offset_top = 374.0
offset_right = 1135.0
offset_bottom = 428.0
theme_override_colors/font_color = Color(0.975043, 0.979608, 0.974123, 1)
theme_override_colors/font_shadow_color = Color(0.117647, 0.14902, 0.156863, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_fonts/font = ExtResource("11_x7a0i")
theme_override_font_sizes/font_size = 38
text = "f(x) = (x^ + 10x - 29) * (-0.33x + 0.25)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HB_bg" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(175.723, 72.375)
scale = Vector2(7.19643, 7.19643)
texture = ExtResource("12_13gfv")

[node name="EHB_bg" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(998.188, 61.875)
scale = Vector2(5.125, 5.125)
texture = ExtResource("12_13gfv")

[connection signal="button_down" from="AttackButton" to="." method="_on_attack_button_button_down"]
[connection signal="button_up" from="AttackButton" to="." method="_on_attack_button_button_up"]
[connection signal="button_down" from="HelpButton" to="." method="_on_help_button_button_down"]
[connection signal="button_up" from="HelpButton" to="." method="_on_help_button_button_up"]
[connection signal="focus_entered" from="Answer" to="." method="_on_answer_focus_entered"]
[connection signal="focus_entered" from="Answer2" to="." method="_on_answer_2_focus_entered"]
[connection signal="focus_entered" from="Answer3" to="." method="_on_answer_3_focus_entered"]
